# drf-imgproxy

./: .gitignore  CHANGELOG.rst  LICENSE  README.rst  pyproject.toml  setup.cfg
.github/workflows/: lint.yml  publish.yml  tests.yml
drf_imgproxy/: apps.py  serializers.py
tests/: conftest.py  test_apps.py  test_drf_imgproxy.py  test_metadata.py  test_serializers.py
