[tool.poetry]
name = "drf-imgproxy"
version = "0.1.0"
description = ""
authors = ["VIPER Development UG <info@viper.dev>"]

[tool.poetry.dependencies]
python = "^3.8"
djangorestframework = ">=3.9.0"
Django = ">=2.1.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
flake8 = "^3.8.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
